@@ -1,6 +1,7 @@
 User-visible changes in version 1.0.3  (2011-  -  ):
 * added calculation of Polyline derivatives, what enables weighted least
   squares approximation by broken lines
+* gzipped fit files can be read directly (extension .fit.gz or .fityk.gz)
 
 User-visible changes in version 1.0.2  (2011-06-08):
 * changed Data > Load File dialog
